# NBody-simulation-parallel

./: .gitignore  Makefile  README.md  main.cpp  main_cuda.cu  methods.cpp  methods.h  results.ipynb  utils.cpp  utils.h
nbody-sim-new/: CMakeLists.txt  Makefile  README.md  analyze_results.ipynb  body.h  bvh.cpp  bvh.h  fmm.cpp  fmm.h  fmm_omp.cpp  fmm_omp.h  fmm_parlay.cpp  fmm_parlay.h  main.cpp  main_cuda.cu  methods.cpp  methods.h  nbody_sim  octree.cpp  octree.h  rename_tpp_files.sh  run_simulations.sh  utils.h  vector.h
nbody-sim-new/analysis/: aggregated_results.csv  analyze_results.ipynb
nbody_sim_old/: fmm_omp.tpp  fmm_parlay.tpp
